<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearColumnpath191One"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearSignupview"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearRowpath191One"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imagePath191One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_216"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_216"/>
                    <ImageView android:id="@+id/imagePath192One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_217"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_217"/>
                    <ImageView android:id="@+id/imagePath193One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_29pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_218"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_218"/>
                    <ImageView android:id="@+id/imagePath194One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_26pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_219"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_219"/>
                    <FrameLayout android:id="@+id/frameStackview"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_42pxv" android:layout_width="@dimen/_107pxh">
                        <ImageView android:id="@+id/imageImage"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_42pxh"
                            android:layout_width="@dimen/_64pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_group_298"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_group_298"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/viewView"
                            android:layout_gravity="top|start"
                            android:layout_height="@dimen/_5pxv" android:layout_width="@dimen/_25pxh"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/viewViewOne"
                            android:layout_gravity="bottom|start"
                            android:layout_height="@dimen/_5pxv" android:layout_width="@dimen/_25pxh"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/viewViewTwo"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_5pxv" android:layout_width="@dimen/_25pxh"/>
                        <ImageView android:id="@+id/imagePath195One"
                            android:layout_gravity="end"
                            android:layout_height="@dimen/_24pxh"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_path_216"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_path_216"/>
                    </FrameLayout>
                    <ImageView android:id="@+id/imagePath196One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_217"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_217"/>
                    <ImageView android:id="@+id/imagePath197One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_29pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_218"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_218"/>
                    <ImageView android:id="@+id/imagePath198One"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_26pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_path_219"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_path_219"/>
                    <LinearLayout android:id="@+id/linearColumnview"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content" android:orientation="vertical">
                        <View android:background="@color/black_900"
                            android:id="@+id/viewViewThree"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="@dimen/_5pxv" android:layout_width="@dimen/_25pxh"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/viewViewFour"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="@dimen/_5pxv" android:layout_width="@dimen/_25pxh"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/viewViewFive"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="@dimen/_5pxv" android:layout_width="@dimen/_25pxh"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:id="@+id/txtSignup"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:text="@string/lbl_sign_up"
                    style="@style/txtMontserratbold77" tools:text="@string/lbl_sign_up"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/lbl_name"
                    android:id="@+id/etName" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.18"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_900"
                    style="@style/etMontserratblackitalic30" tools:ignore="Autofill"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etEmail" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.18"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_900"
                    style="@style/etMontserratblackitalic30" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPassword"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.18"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_password"
                    style="@style/txtMontserratblackitalic30" tools:text="@string/lbl_password"/>
                <View android:background="@color/gray_900"
                    android:id="@+id/lineLine"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv" android:layout_width="@dimen/_595pxh"/>
                <FrameLayout android:id="@+id/frameStackhowoldarey"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_63pxv" android:layout_width="@dimen/_598pxh">
                    <TextView android:id="@+id/txtHowoldareyou"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.18"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:text="@string/msg_how_old_are_you"
                        style="@style/txtMontserratblackitalic30" tools:text="@string/msg_how_old_are_you"/>
                    <View android:background="@color/gray_900"
                        android:id="@+id/lineLineOne"
                        android:layout_gravity="bottom|center"
                        android:layout_height="@dimen/_1pxv" android:layout_width="@dimen/_595pxh"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtWhereareyou"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.18"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@string/msg_where_are_you_based"
                    style="@style/txtMontserratblackitalic30" tools:text="@string/msg_where_are_you_based"/>
                <View android:background="@color/gray_900"
                    android:id="@+id/lineLineTwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv" android:layout_width="@dimen/_595pxh"/>
                <FrameLayout android:id="@+id/frameStackviewSix"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_99pxv" android:layout_width="@dimen/_596pxh">
                    <View
                        android:background="@drawable/rectangle_bg_deep_purple_a400_radius_33"
                        android:id="@+id/viewViewSix"
                        android:layout_gravity="top|center"
                        android:layout_height="@dimen/_67pxv" android:layout_width="@dimen/_596pxh"/>
                    <TextView android:id="@+id/txtSignupOne"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.18"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:text="@string/lbl_sign_up"
                        style="@style/txtMontserratbold30" tools:text="@string/lbl_sign_up"/>
                </FrameLayout>
                <TextView android:id="@+id/txtConfirmation"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.18"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:text="@string/msg_already_have_an"
                    style="@style/txtMontserratbold30_2" tools:text="@string/msg_already_have_an"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
